got some error in second shell.
Removed inplace=True and used assignment (df['Age'] = ...) to update the columns directly.
The functionality remains identical: missing values in Age are filled with the median, Embarked with the mode, and Cabin with "Unknown".
These changes eliminate the FutureWarning messages and are compatible with future Pandas versions.

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d8dbc753",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "e4f09417",
    "metadata": {},
    "outputs": [
@@ -104,40 +104,13 @@
       "Embarked       0\n",
       "dtype: int64\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pkuma\\AppData\\Local\\Temp\\ipykernel_11064\\291772805.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Age'].fillna(df['Age'].median(), inplace=True)  # Impute Age with median\n",
-      "C:\\Users\\pkuma\\AppData\\Local\\Temp\\ipykernel_11064\\291772805.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Embarked'].fillna(df['Embarked'].mode()[0], inplace=True)  # Impute Embarked with mode\n",
-      "C:\\Users\\pkuma\\AppData\\Local\\Temp\\ipykernel_11064\\291772805.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df['Cabin'].fillna('Unknown', inplace=True)  # Impute Cabin with placeholder\n"
-     ]
     }
    ],
    "source": [
     "# Handle missing values\n",
-    "df['Age'].fillna(df['Age'].median(), inplace=True)  # Impute Age with median\n",
-    "df['Embarked'].fillna(df['Embarked'].mode()[0], inplace=True)  # Impute Embarked with mode\n",
-    "df['Cabin'].fillna('Unknown', inplace=True)  # Impute Cabin with placeholder\n",
+    "df['Age'] = df['Age'].fillna(df['Age'].median())  # Impute Age with median\n",
+    "df['Embarked'] = df['Embarked'].fillna(df['Embarked'].mode()[0])  # Impute Embarked with mode\n",
+    "df['Cabin'] = df['Cabin'].fillna('Unknown')  # Impute Cabin with placeholder\n",
     "\n",
     "# Standardize 'Name' column\n",
     "df['Name'] = df['Name'].str.strip().str.lower()  # Remove extra spaces and convert to lowercase\n",
@@ -149,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "c729ad50",
    "metadata": {},
    "outputs": [
@@ -196,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "65972137",
    "metadata": {},
    "outputs": [
@@ -248,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "737ffd05",
    "metadata": {},
    "outputs": [
